# heat-sheet-pdf-highlighter

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  build_windows_installer.py  create_release.py  heat_sheet_pdf_highlighter.py  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_build.txt  requirements_dev.txt  setup.iss  setup.py  setup_version.iss  sync_version.py  update_app.bat  update_version.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
assets/ocr/: README.md
assets/tkBreeze/: README.md
assets/tkBreeze/breeze/: breeze.tcl
assets/tkBreeze/breeze-dark/: breeze-dark.tcl
dev/: test_updater_sha.py
docs/: OCR_BENCHMARKS.md
locales/: README.md  __init__.py  po_autofill_en.py  po_update_and_review.py  update_mo_files.bat  update_po_files.bat  update_translation_files.bat  update_translation_files_interactive.bat  update_translation_files_noninteractive.bat  update_translations.py
locales/de/LC_MESSAGES/: base.mo  base.po
locales/en/LC_MESSAGES/: base.mo  base.po
src/: __init__.py  _version.py  app.py  constants.py  version.py
src/config/: __init__.py  paths.py  settings.py
src/core/: __init__.py  ocr.py  pdf_processor.py  watermark.py
src/gui/: __init__.py  dev_tools.py  dialogs.py  main_window.py  message_dialog.py  preview.py  ui_strings.py  widgets.py
src/models/: __init__.py
src/utils/: __init__.py  cache.py  localization.py  logging.py  theme.py  updater.py
tests/: conftest.py  test_app.py  test_build_windows_installer.py  test_create_release.py  test_logging_config.py  test_sync_version.py  test_ui_strings.py  test_update_app_batch.py  test_update_translations.py  test_updater_sha.py  test_version.py
tests/config/: test_paths.py  test_settings.py
tests/core/: test_ocr.py  test_pdf_processor.py  test_watermark.py
tests/gui/: test_main_window_close.py  test_main_window_processing.py  test_main_window_theme.py  test_preview.py  test_ui_strings.py  test_watermark_dialog.py  test_widgets.py
tests/utils/: test_cache.py  test_localization.py  test_logging.py  test_theme.py  test_updater_ext.py  test_updater_sha.py
