[project]
name = "heat-sheet-pdf-highlighter"
version = "1.4.3"
description = "Tkinter desktop application for highlighting heat-sheet PDFs."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Jonas Albrecht" },
]
dependencies = [
    "markdown2==2.5.5",
    "pillow==12.2.0",
    "pymupdf==1.27.2.3",
    "requests==2.34.1",
    "tkinterweb==4.25.2",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "build" },
]
test = [
    "coverage==7.14.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]
lint = [
    "ruff==0.15.13",
]
build = [
    "cx_Freeze==8.6.4",
    "polib==1.2.0",
    "pywin32==311; sys_platform == 'win32'",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
