[project]
name = "heat-sheet-pdf-highlighter"
version = "2.1.0"
description = "Tkinter desktop application for highlighting heat-sheet PDFs."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Jonas Albrecht" },
]
dependencies = [
    "markdown2==2.5.5",
    "pillow==12.2.0",
    "pymupdf==1.27.2.3",
    "requests==2.34.2",
    "tkinterweb==4.25.3",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "build" },
]
test = [
    "coverage==7.14.1",
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
]
lint = [
    "ruff==0.15.17",
]
build = [
    "cx_Freeze==8.6.4",
    "polib==1.2.0",
    "pywin32==311; sys_platform == 'win32'",
]

[tool.uv]
package = false

[tool.cxfreeze]
executables = [
    { script = "main.py", base = "gui", target_name = "heat_sheet_pdf_highlighter.exe", icon = "assets/icon/app_icon.ico" },
]

[tool.cxfreeze.build_exe]
packages = ["tkinter", "pymupdf", "tkinterweb"]
includes = ["PIL", "requests", "gettext", "markdown2"]
include_files = [
    ["assets", "assets"],
    ["locales", "locales"],
    ["update_app.bat", "update_app.bat"],
]
build_exe = "cx_build"
optimize = 2
include_msvcr = true
silent_level = 1
zip_exclude_packages = ["pymupdf", "PIL"]
excludes = ["test", "unittest"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
